# attractor

./: .gitignore  Dockerfile  Justfile  fly.toml  pyproject.toml
docs/usage/: attractor-cli.md
pipelines/: acceptance.dot  discovery.dot  engineering.dot
src/attractor/: __init__.py  cli.py
src/attractor/agent/: __init__.py  session.py  truncation.py
src/attractor/agent/execution/: __init__.py  base.py  local.py
src/attractor/agent/profiles/: __init__.py  anthropic.py  base.py
src/attractor/agent/tools/: __init__.py  core.py
src/attractor/llm/: __init__.py  adapter.py  client.py  errors.py  high_level.py  retry.py  types.py
src/attractor/llm/adapters/: anthropic.py
src/attractor/pipeline/: __init__.py  checkpoint.py  conditions.py  context.py  engine.py  graph.py  outcome.py  parser.py  validator.py
src/attractor/pipeline/handlers/: __init__.py  base.py  core.py  llm_backend.py
src/attractor/pipeline/interviewer/: __init__.py  auto.py  base.py  console.py  queue.py
tests/: test_smoke.py
tests/agent/: test_execution.py  test_session.py  test_truncation.py
tests/fixtures/pipelines/: human_gate.dot
tests/llm/: test_client.py  test_errors.py  test_retry.py  test_types.py
tests/pipeline/: test_engine.py  test_parser.py  test_validator.py
