[project]
name = "attractor"
version = "0.1.0"
description = "A DOT-based pipeline engine for orchestrating multi-stage AI workflows"
readme = "README.md"
authors = [
    { name = "bicabone", email = "b.icabone@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
]

[project.scripts]
attractor = "attractor.cli:main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires API keys (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
